--- a/research/slim/BUILD
+++ b/research/slim/BUILD
@@ -796,12 +796,6 @@ py_binary(
     srcs = ["export_inference_graph.py"],
     # WARNING: not supported in bazel; will be commented out by copybara.
     # paropts = ["--compress"],
-    deps = [":export_inference_graph_lib"],
-)
-
-py_library(
-    name = "export_inference_graph_lib",
-    srcs = ["export_inference_graph.py"],
     deps = [
         ":dataset_factory",
         ":nets_factory",
@@ -819,7 +813,7 @@ py_test(
         "manual",
     ],
     deps = [
-        ":export_inference_graph_lib",
+        ":export_inference_graph",
         # "//tensorflow",
         # "//tensorflow/python:platform",
     ],
